@@ -527,6 +527,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-5640. Add snapshot methods to FileContext. (Rakesh R via cnauroth)
 
+    HDFS-8284. Update documentation about how to use HTrace with HDFS (Masatake
+    Iwasaki via Colin P. McCabe)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
